--- a/profile.html
+++ b/profile.html
@@ -1,3 +1,8 @@
-<h2>My Profile</h2>
-<div id="profile"></div>
+<div class="container">
+  <h2>My Profile</h2>
+  
+  <div class="card" id="profile">
+    
 <script src="assets/js/app.js"></script>
+  </div>
+</div>
