--- a/work.html
+++ b/work.html
@@ -1,3 +1,16 @@
-<h2>Work Records</h2>
-<div id="work"></div>
-<script src="assets/js/app.js"></script>
+<h2>Work Record</h2>
+
+<div class="card">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Employee ID</th>
+        <th>Date</th>
+        <th>Hours</th>
+        <th>Type</th>
+        <th>Note</th>
+      </tr>
+    </thead>
+    <tbody id="work"></tbody>
+  </table>
+</div>
